Fixes whether widget alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -450,7 +450,7 @@ video {
         width: 175px;
     }
     .main-header .main-menu .widgets {
-        width: 175px;
+        width: 200px;
     }
     .main-menu {
         position: relative;
